--- a/html/students.html
+++ b/html/students.html
@@ -1,3 +1,12 @@
+<script type="importmap">
+{
+  "imports": {
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.81.1",
+    "supabaseClient": "/supabaseClient.js"
+  }
+}
+</script>
+<script src="/env.js"></script>
 <div class="space-y-6">
   <div class="bg-white p-6 rounded-lg shadow-md">
     <div class="flex justify-between items-center mb-4">
@@ -110,3 +119,4 @@
   </div>
   
 </div>
+<script type="module" src="/html/students.js"></script>
